fix(layout): visible scrollbar in basic layout (#991)

--- a/packages/layout/src/assets/css/layouts/basic.css
+++ b/packages/layout/src/assets/css/layouts/basic.css
@@ -34,6 +34,6 @@
   }
 
   .layout.basic.fixed > main {
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
