--- a/packages/layout/src/assets/css/layouts/collapsible-sidebar-layout.css
+++ b/packages/layout/src/assets/css/layouts/collapsible-sidebar-layout.css
@@ -56,6 +56,6 @@
   }
 
   .layout.collapsible.fixed > main {
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
